new mobile.html website

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
 
 		    		</div>
-		    		<img class="blurid" src="img/hootdesign.jpg"  width="100%" alt="iPhone" />
+		    		<img class="blur" src="img/hootdesign.jpg"  width="100%" alt="iPhone" />
 	        	</div>
 		    </section>
 
