--- a/404.html
+++ b/404.html
@@ -69,6 +69,11 @@
                 margin: 0 auto;
             }
 
+            .container img {
+                width: 100px;
+                margin-left: 35%;
+            }
+
             /* google search */
 
             #goog-fixurl ul {
@@ -141,6 +146,7 @@
     </head>
     <body>
         <div class="container">
+            <img src="img/logoicon2.png"/>
             <h1>Not found <span>:(</span></h1>
             <p>Sorry, but the page you were trying to view does not exist.</p>
             <p>It looks like this was the result of either:</p>
