--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 
 
             </div>
-            <img src="img/about.jpg" width="100%" alt="iPhone"/>
+            <img class="blur" src="img/about.jpg" width="100%" alt="iPhone"/>
         </div>
     </section>
     <section>
@@ -97,7 +97,7 @@
 
 
             </div>
-            <img src="img/how.jpg" width="100%" alt="iPhone"/>
+            <img class="blur" src="img/how.jpg" width="100%" alt="iPhone"/>
         </div>
     </section>
 
