responsiveness pretty much done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="logo" class="wow fadeInDown">
         <img src="img/logoicon2.png" width="70" /><span>hoot<strong>Parking</strong></span>
     </div>
-    <li id="leftfeat">
+    <li id="leftfeat" class="res">
         <img class="wow bounceInRight" id="img1" src="img/androidphone.png" width="300"/>
     </li>
 <li class="text wow fadeInDown">
@@ -45,8 +45,8 @@
 
 <section class="white">
     <ul class="features rediscover">
-        <li class="wow fadeInUp">
-            <img src="img/findcar2.png" width="200"/>
+        <li class="res2">
+            <img class="wow fadeInUp" src="img/findcar2.png" width="200"/>
         </li>
         <li class="text down wow fadeInDown">
             <h2>Rediscover parking</h2>
@@ -61,7 +61,7 @@
     </ul>
 </section>
 
-<section class="white">
+<section class="white grad">
     <div class="title">
         <h2>Be proactive</h2>
         Your time is precious, don't miss any meeting or loose time on your family week end just trying to park your car.
@@ -80,7 +80,7 @@
                 </li>
             </ul>
         </li>
-        <li>
+        <li class="res3">
             <img src="img/windows.png" width="300"/>
         </li>
         <li class="feature-list">
@@ -122,11 +122,12 @@
 
             <div id="learnmore" class="collapse drop-content">
 <div id="inspiration">
-    <div class="title">
-        <h2>The inspiration</h2>
-        Hootparking is about contributing to help organize the city parking.
-    </div>
+
     <div id="inspiration-text">
+        <div class="title">
+            <h2>The inspiration</h2>
+            Hootparking is about contributing to help organize the city parking.
+        </div>
         Bringing the community together,
         helping transform the frustration of parking to an enjoyable experience leaving them the chance the
         fully appreciate the city life.
@@ -141,20 +142,21 @@
         cities.
     </div>
 </div>
-    <div id="how-work">
-        <div class="title">
-            <h2>How it works?</h2>
-            Simplicity and beautiful design is our main focus to facilitate
-            parking and make it an enjoyable experience.
-        </div>
-        <div class="left wow fadeInLeft" data-wow-delay="0.5s"><div class="point"></div>Search destination
-        <p>Quickly find the closest parking to you destination</p></div>
-        <div class="right wow fadeInRight" data-wow-delay="1.5s"><div class="point"></div>Tack time & spending
-        <p>Hootparking will track you time, spending and notify you when to move</p></div>
-        <img class="wow rubberBand" data-wow-delay="1s" src="img/hotwork.png"  width="800" alt=""/>
-        <div class="center wow fadeInUp" data-wow-delay="1s"><div class="point"></div>Park your car
-        <p>Stress free hootparking will prevent you to get tickets or your car towed</p></div>
-    </div>
+    <!--<div id="how-work">-->
+        <!--<div class="title">-->
+            <!--<h2>How it works?</h2>-->
+            <!--Simplicity and beautiful design is our main focus to facilitate-->
+            <!--parking and make it an enjoyable experience.-->
+        <!--</div>-->
+        <!--<div class="left wow fadeInLeft" data-wow-delay="0.5s"><div class="point"></div>Search destination-->
+        <!--<p>Quickly find the closest parking to you destination</p></div>-->
+        <!--<div class="right wow fadeInRight" data-wow-delay="1.5s"><div class="point"></div>Tack time & spending-->
+        <!--<p>Hootparking will track you time, spending and notify you when to move</p></div>-->
+        <!--<img class="wow rubberBand" data-wow-delay="1s" src="img/hotwork.png"  width="800" alt=""/>-->
+        <!--<div id="curve"></div>-->
+        <!--<div class="center wow fadeInUp" data-wow-delay="1s"><div class="point"></div>Park your car-->
+        <!--<p>Stress free hootparking will prevent you to get tickets or your car towed</p></div>-->
+    <!--</div>-->
             </div><!--learn more-->
 
             <div id="meetus" class="collapse drop-content">
@@ -164,7 +166,7 @@
         app or share your appreciation.
     </div>
     <ul class="about-founders">
-        <li class="wow fadeInUp">
+        <li class="wow fadeInDown res">
             <div class="img-box" id="blue">
                 <div class="img-circular" id="dan"></div>
                 <div class="img-tag">
@@ -185,7 +187,7 @@
         </li>
 
 
-        <li class="wow fadeInUp">
+        <li class="wow fadeInDown res">
             <div class="img-box" id="yellow">
                 <div class="img-circular" id="wiss"></div>
                 <div class="img-tag">
