added grunt for optimization

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+    <!-- Meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <title>HootParking</title>
+    <!-- Links -->
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
@@ -12,12 +14,12 @@
 <body>
 
 <section class="orange">
-<ul class="features">
     <div id="logo" class="wow fadeInDown">
-        <img src="img/logoicon2.png" width="70" /><span>hoot<strong>Parking</strong></span>
+        <img src="img/logoicon2.png" width="70" alt="logo icon" /><span>hoot<strong>Parking</strong></span>
     </div>
+<ul class="features">
     <li id="leftfeat" class="res">
-        <img class="wow bounceInRight" id="img1" src="img/androidphone.png" width="300"/>
+        <img class="wow bounceInRight" id="img1" src="img/androidphone.png" width="300" alt="hoot parking phone"/>
     </li>
 <li class="text wow fadeInDown">
 
@@ -35,8 +37,8 @@
     </div>
 
     <div class="appstore">
-    <a href=""><img src="img/android.png" width="140" height="45"/></a>
-    <a href=""><img src="img/apple.png" width="140" height="45"/></a>
+    <a href=""><img src="img/android.png" width="140" height="45" alt="hoot parking phone"/></a>
+    <a href=""><img src="img/apple.png" width="140" height="45" alt="hoot parking phone"/></a>
     </div>
 </li>
 
@@ -46,16 +48,16 @@
 <section class="white">
     <ul class="features rediscover">
         <li class="res2">
-            <img class="wow fadeInUp" src="img/findcar2.png" width="200"/>
+            <img class="wow fadeInUp" src="img/findcar2.png" width="200" alt="hoot parking phone"/>
         </li>
         <li class="text down wow fadeInDown">
             <h2>Rediscover parking</h2>
             Simply designed to provide you necessary informations at the right time in the right context
             <ul id="notifications">
-                <li><img src="img/notification.png"  width="30" alt="" /> Instant notifications</li>
-                <li><img src="img/reminder.png" width="30" alt="" /> Parking reminder</li>
-                <li><img src="img/localisation.png" width="30" alt="" /> Location based</li>
-                <li><img src="img/tracking.png" width="30" alt="" /> Time tracking</li>
+                <li><img src="img/notification.png"  width="30" alt="notification" /> Instant notifications</li>
+                <li><img src="img/reminder.png" width="30" alt="reminder" /> Parking reminder</li>
+                <li><img src="img/localisation.png" width="30" alt="localisation" /> Location based</li>
+                <li><img src="img/tracking.png" width="30" alt="tracking" /> Time tracking</li>
             </ul>
         </li>
     </ul>
@@ -70,26 +72,26 @@
     <ul class="features">
         <li class="feature-list left">
             <ul>
-                <li class="wow fadeInLeft"><img src="img/time.png"  width="80" alt="" />
+                <li class="wow fadeInLeft"><img src="img/time.png"  width="80" alt="time" />
                     <h6>Save time</h6>
                     Hootparking will help you park your car faster and closer
                 </li>
-                <li class="wow fadeInLeft" data-wow-delay="2s"><img src="img/sun.png"  width="80" alt="" />
+                <li class="wow fadeInLeft" data-wow-delay="2s"><img src="img/sun.png"  width="80" alt="sun" />
                     <h6>Stay healthy</h6>
                     Reduce sitting time in car to be more active out in the sunlight
                 </li>
             </ul>
         </li>
         <li class="res3">
-            <img src="img/windows.png" width="300"/>
+            <img src="img/windows.png" width="300" alt="hoot parking phone"/>
         </li>
         <li class="feature-list">
             <ul>
-                <li class="wow fadeInRight" data-wow-delay="1.5s"><img src="img/recycle.png"  width="80" alt="" />
+                <li class="wow fadeInRight" data-wow-delay="1.5s"><img src="img/recycle.png"  width="80" alt="recycle" />
                     <h6>Reduce pollution</h6>
                         Save on gas and help reduce pollution in our environment
                 </li>
-                <li class="wow fadeInRight" data-wow-delay="0.5s"><img src="img/dollars.png"  width="80" alt="" />
+                <li class="wow fadeInRight" data-wow-delay="0.5s"><img src="img/dollars.png"  width="80" alt="save money" />
                     <h6>Save money</h6>
                         Save on parking fees and avoid getting tickets
                 </li>
@@ -104,9 +106,9 @@
         No hard feelings, whichever device you use is supported
     </div>
     <ul id="platforms">
-    <li><img class="wow flip" src="img/apple-logo.png" width="60" alt="" /><p>iOS</p></li>
-    <li><img class="wow flip" data-wow-delay="0.5s" src="img/android-logo.png" width="60" alt="" /><p>Android</p></li>
-    <li><img class="wow flip" data-wow-delay="1s" src="img/windows-logo.png" width="60" alt="" /><p>Windows</p></li>
+    <li><img class="wow flip" src="img/apple-logo.png" width="60" alt="apple logo" /><p>iOS</p></li>
+    <li><img class="wow flip" data-wow-delay="0.5s" src="img/android-logo.png" width="60" alt="android logo" /><p>Android</p></li>
+    <li><img class="wow flip" data-wow-delay="1s" src="img/windows-logo.png" width="60" alt="windows logo" /><p>Windows</p></li>
     </ul>
 </section>
 
@@ -131,13 +133,13 @@
         Bringing the community together,
         helping transform the frustration of parking to an enjoyable experience leaving them the chance the
         fully appreciate the city life.
-        <h6 id="blue">Focus on the most important</h6>
+        <h6>Focus on the most important</h6>
         From a local resident going to work, attending a meeting, rushing to
         conference or a new tourist hoping drive around, they can now focus on their destination.
-        <h6 id="pink">Save on the rest</h6>
+        <h6>Save on the rest</h6>
         Spending less time looking for parking will allow users to save on gas, time, and be able to find the
         cheapest parking available nearby.
-        <h6 id="green">Protect our environment</h6>
+        <h6>Protect our environment</h6>
         Let's be green, taking a step toward reducing gas pollution in big
         cities.
     </div>
