--- a/404.html
+++ b/404.html
@@ -146,7 +146,7 @@
     </head>
     <body>
         <div class="container">
-            <img src="img/logoicon2.png"/>
+            <img src="img/logoicon2.png" alt="logo"/>
             <h1>Not found <span>:(</span></h1>
             <p>Sorry, but the page you were trying to view does not exist.</p>
             <p>It looks like this was the result of either:</p>
